# trass-vm-lxc

./: .travis.yml  README.md  trass-lxc.cabal  trass-vm-lxc.cabal
examples/: .section.yml  .trass.yml  main.c  min.yml
examples/common_task/: Makefile
examples/task/: Makefile
src/: Trass.hs
src/Trass/: Config.hs
src/Trass/Config/: Command.hs  Options.hs  Submission.hs  User.hs  Util.hs
src/Trass/VM/: LXC.hs
