name:                trass-lxc
version:             0.1
synopsis:            LXC container management library for TRASS.
-- description:
homepage:            https://github.com/fizruk/trass-lxc
bug-reports:         https://github.com/fizruk/trass-lxc/issues
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:
    Trass
  build-depends:      base          >=4.7   &&  <4.8
                    , lxc           >=0.3   &&  <0.4

source-repository head
  type: git
  location: https://github.com/fizruk/trass-lxc.git
  branch: master
