name:                trass-vm-lxc
version:             0.1
synopsis:            LXC as VM for TRASS.
-- description:
homepage:            https://github.com/trass/trass-vm-lxc
bug-reports:         https://github.com/trass/trass-vm-lxc/issues
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:
    Trass.VM.LXC
  default-extensions:
    OverloadedStrings
    TypeFamilies
    RecordWildCards
  build-depends:      base          >=4.7   &&  <4.8
                    , transformers  >=0.2
                    , text
                    , process       >=1.2
                    , filepath
                    , unix          >=2.0
                    , Unixutils
                    , lxc           >=0.3      &&  <0.4
                    , trass-config
                    , trass-vm

source-repository head
  type: git
  location: https://github.com/trass/trass-vm-lxc.git
  branch: master
